sugar/tests/success/units.mx

a : _|_, b : 1 |- let () = b in a
