sugar/tests/fail/choice.mx
a : 1 |- let b = fst a in b
